--- a/packages/firebase_remote_config/firebase_remote_config_web/pubspec.yaml
+++ b/packages/firebase_remote_config/firebase_remote_config_web/pubspec.yaml
@@ -6,8 +6,8 @@ repository: https://github.com/FirebaseExtended/flutterfire/tree/master/packages
 version: 1.0.3
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: '>=2.7.0 <3.0.0'
+  flutter: '>=1.20.0'
 
 dependencies:
   firebase_core: ^1.10.0
