--- a/packages/firebase_analytics/firebase_analytics/pubspec.yaml
+++ b/packages/firebase_analytics/firebase_analytics/pubspec.yaml
@@ -7,16 +7,20 @@ repository: https://github.com/FirebaseExtended/flutterfire/tree/master/packages
 version: 9.0.4
 
 false_secrets:
- - example/**
+  - example/**
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.7.0 <3.0.0'
   flutter: '>=1.12.13+hotfix.5'
 
 dependencies:
   firebase_analytics_platform_interface: ^3.0.3
   firebase_analytics_web: ^0.4.0+4
-  firebase_core: ^1.10.0
+  firebase_core:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_core/firebase_core
+      ref: fix/messaging
   firebase_core_platform_interface: ^4.2.3
   flutter:
     sdk: flutter
