--- a/packages/firebase_crashlytics/firebase_crashlytics/pubspec.yaml
+++ b/packages/firebase_crashlytics/firebase_crashlytics/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   firebase_crashlytics_platform_interface: ^3.1.11
   flutter:
     sdk: flutter
-  stack_trace: ^1.10.0
+  stack_trace: 1.9.6
 
 dev_dependencies:
   flutter_test:
