--- a/packages/firebase_in_app_messaging/firebase_in_app_messaging/pubspec.yaml
+++ b/packages/firebase_in_app_messaging/firebase_in_app_messaging/pubspec.yaml
@@ -8,8 +8,8 @@ false_secrets:
   - example/**
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.12.13+hotfix.5"
+  sdk: '>=2.7.0 <3.0.0'
+  flutter: '>=1.12.13+hotfix.5'
 
 dependencies:
   firebase_core:
@@ -21,7 +21,7 @@ dependencies:
   firebase_in_app_messaging_platform_interface: ^0.2.0+5
   flutter:
     sdk: flutter
-  meta: ^1.3.0
+  meta: 1.3.0-nullsafety.3
 
 dev_dependencies:
   flutter_test:
