--- a/packages/firebase_analytics/firebase_analytics_platform_interface/pubspec.yaml
+++ b/packages/firebase_analytics/firebase_analytics_platform_interface/pubspec.yaml
@@ -5,14 +5,14 @@ repository: https://github.com/FirebaseExtended/flutterfire/tree/master/packages
 version: 3.0.3
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: '>=1.9.1+hotfix.5'
+  sdk: '>=2.7.0 <3.0.0'
+  # flutter: '>=1.9.1+hotfix.5'
 
 dependencies:
   firebase_core: ^1.10.0
   flutter:
     sdk: flutter
-  meta: ^1.3.0
+  meta: 1.3.0
   plugin_platform_interface: ^2.0.0
 
 dev_dependencies:
