--- a/packages/firebase_in_app_messaging/firebase_in_app_messaging/pubspec.yaml
+++ b/packages/firebase_in_app_messaging/firebase_in_app_messaging/pubspec.yaml
@@ -17,7 +17,11 @@ dependencies:
       url: https://github.com/markokarapandzic/flutterfire.git
       path: packages/firebase_core/firebase_core
       ref: fix/messaging
-  firebase_core_platform_interface: ^4.2.3
+  firebase_core_platform_interface:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_core/firebase_core_platform_interface
+      ref: fix/messaging
   firebase_in_app_messaging_platform_interface: ^0.2.0+5
   flutter:
     sdk: flutter
