--- a/packages/firebase_core/firebase_core_platform_interface/pubspec.yaml
+++ b/packages/firebase_core/firebase_core_platform_interface/pubspec.yaml
@@ -7,14 +7,14 @@ repository: https://github.com/FirebaseExtended/flutterfire/tree/master/packages
 version: 4.2.3
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.12.13+hotfix.5"
+  sdk: '>=2.7.0 <3.0.0'
+  # flutter: ">=1.12.13+hotfix.5"
 
 dependencies:
   collection: ^1.0.0
   flutter:
     sdk: flutter
-  meta: ^1.3.0
+  meta: 1.3.0
   plugin_platform_interface: ^2.0.0
 
 dev_dependencies:
