--- a/packages/firebase_in_app_messaging/firebase_in_app_messaging/pubspec.yaml
+++ b/packages/firebase_in_app_messaging/firebase_in_app_messaging/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   firebase_in_app_messaging_platform_interface: ^0.2.0+5
   flutter:
     sdk: flutter
-  meta: 1.3.0-nullsafety.3
+  meta: 1.3.0
 
 dev_dependencies:
   flutter_test:
