--- a/packages/firebase_messaging/firebase_messaging/pubspec.yaml
+++ b/packages/firebase_messaging/firebase_messaging/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   firebase_messaging_web: ^2.2.5
   flutter:
     sdk: flutter
-  meta: 1.3.0-nullsafety.3
+  meta: 1.3.0
 
 dev_dependencies:
   async: ^2.5.0
