--- a/packages/firebase_messaging/firebase_messaging_web/pubspec.yaml
+++ b/packages/firebase_messaging/firebase_messaging_web/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   js: ^0.6.3
-  meta: ^1.3.0
+  meta: 1.3.0
 
 dev_dependencies:
   firebase_core_platform_interface: ^4.2.3
