--- a/packages/firebase_core/firebase_core/pubspec.yaml
+++ b/packages/firebase_core/firebase_core/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   firebase_core_web: ^1.5.3
   flutter:
     sdk: flutter
-  meta: 1.3.0
+  meta: 1.3.0-nullsafety.3
 
 dev_dependencies:
   flutter_test:
