--- a/packages/firebase_core/firebase_core_platform_interface/pubspec.yaml
+++ b/packages/firebase_core/firebase_core_platform_interface/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   collection: ^1.0.0
   flutter:
     sdk: flutter
-  meta: 1.3.0
+  meta: 1.3.0-nullsafety.3
   plugin_platform_interface: 1.0.3
 
 dev_dependencies:
