--- a/packages/firebase_core/firebase_core_web/pubspec.yaml
+++ b/packages/firebase_core/firebase_core_web/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   js: ^0.6.3
-  meta: ^1.3.0
+  meta: 1.3.0-nullsafety.3
 
 dev_dependencies:
   firebase_core: ^1.10.0
