--- a/packages/firebase_messaging/firebase_messaging_web/pubspec.yaml
+++ b/packages/firebase_messaging/firebase_messaging_web/pubspec.yaml
@@ -6,7 +6,7 @@ version: 2.2.5
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.12.13+hotfix.4"
+  flutter: '>=1.12.13+hotfix.4'
 
 dependencies:
   firebase_core: ^1.10.0
@@ -17,7 +17,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   js: ^0.6.3
-  meta: 1.3.0
+  meta: 1.3.0-nullsafety.3
 
 dev_dependencies:
   firebase_core_platform_interface: ^4.2.3
