--- a/packages/firebase_core/firebase_core/pubspec.yaml
+++ b/packages/firebase_core/firebase_core/pubspec.yaml
@@ -18,7 +18,11 @@ dependencies:
       url: https://github.com/markokarapandzic/flutterfire.git
       path: packages/firebase_core/firebase_core_platform_interface
       ref: fix/messaging
-  firebase_core_web: ^1.5.3
+  firebase_core_web:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_core/firebase_core_web
+      ref: fix/messaging
   flutter:
     sdk: flutter
   meta: 1.3.0-nullsafety.3
