--- a/packages/firebase_messaging/firebase_messaging_web/pubspec.yaml
+++ b/packages/firebase_messaging/firebase_messaging_web/pubspec.yaml
@@ -10,7 +10,11 @@ environment:
 
 dependencies:
   firebase_core: ^1.10.0
-  firebase_core_web: ^1.5.3
+  firebase_core_web:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_core/firebase_core_web
+      ref: fix/messaging
   firebase_messaging_platform_interface: ^3.1.4
   flutter:
     sdk: flutter
