--- a/packages/firebase_remote_config/firebase_remote_config_web/pubspec.yaml
+++ b/packages/firebase_remote_config/firebase_remote_config_web/pubspec.yaml
@@ -11,7 +11,11 @@ environment:
 
 dependencies:
   firebase_core: ^1.10.0
-  firebase_core_web: ^1.5.3
+  firebase_core_web:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_core/firebase_core_web
+      ref: fix/messaging
   firebase_remote_config_platform_interface: ^1.0.3
   flutter:
     sdk: flutter
