--- a/packages/firebase_analytics/firebase_analytics/pubspec.yaml
+++ b/packages/firebase_analytics/firebase_analytics/pubspec.yaml
@@ -14,8 +14,16 @@ environment:
   flutter: '>=1.12.13+hotfix.5'
 
 dependencies:
-  firebase_analytics_platform_interface: ^3.0.3
-  firebase_analytics_web: ^0.4.0+4
+  firebase_analytics_platform_interface:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_analytics/firebase_analytics_platform_interface
+      ref: fix/messaging
+  firebase_analytics_web:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_analytics/firebase_analytics_platform_interface
+      ref: fix/messaging
   firebase_core:
     git:
       url: https://github.com/markokarapandzic/flutterfire.git
