--- a/packages/firebase_analytics/firebase_analytics_platform_interface/pubspec.yaml
+++ b/packages/firebase_analytics/firebase_analytics_platform_interface/pubspec.yaml
@@ -9,13 +9,21 @@ environment:
   # flutter: '>=1.9.1+hotfix.5'
 
 dependencies:
-  firebase_core: ^1.10.0
+  firebase_core:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_core/firebase_core
+      ref: fix/messaging
   flutter:
     sdk: flutter
   meta: 1.3.0-nullsafety.3
   plugin_platform_interface: ^2.0.0
 
 dev_dependencies:
-  firebase_core_platform_interface: ^4.2.3
+  firebase_core_platform_interface:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_core/firebase_core_platform_interface
+      ref: fix/messaging
   flutter_test:
     sdk: flutter
