--- a/packages/firebase_analytics/firebase_analytics_web/pubspec.yaml
+++ b/packages/firebase_analytics/firebase_analytics_web/pubspec.yaml
@@ -5,13 +5,25 @@ repository: https://github.com/FirebaseExtended/flutterfire/tree/master/packages
 version: 0.4.0+4
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.7.0 <3.0.0'
   flutter: '>=1.12.13+hotfix.4'
 
 dependencies:
-  firebase_analytics_platform_interface: ^3.0.3
-  firebase_core: ^1.10.0
-  firebase_core_web: ^1.5.3
+  firebase_analytics_platform_interface:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_analytics/firebase_analytics_platform_interface
+      ref: fix/messaging
+  firebase_core:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_core/firebase_core
+      ref: fix/messaging
+  firebase_core_web:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_core/firebase_core_web
+      ref: fix/messaging
   flutter:
     sdk: flutter
   flutter_web_plugins:
