--- a/packages/firebase_in_app_messaging/firebase_in_app_messaging/pubspec.yaml
+++ b/packages/firebase_in_app_messaging/firebase_in_app_messaging/pubspec.yaml
@@ -22,7 +22,11 @@ dependencies:
       url: https://github.com/markokarapandzic/flutterfire.git
       path: packages/firebase_core/firebase_core_platform_interface
       ref: fix/messaging
-  firebase_in_app_messaging_platform_interface: ^0.2.0+5
+  firebase_in_app_messaging_platform_interface:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_in_app_messaging/firebase_in_app_messaging_platform_interface
+      ref: fix/messaging
   flutter:
     sdk: flutter
   meta: 1.3.0-nullsafety.3
