--- a/packages/firebase_messaging/firebase_messaging/pubspec.yaml
+++ b/packages/firebase_messaging/firebase_messaging/pubspec.yaml
@@ -23,8 +23,16 @@ dependencies:
       url: https://github.com/markokarapandzic/flutterfire.git
       path: packages/firebase_core/firebase_core_platform_interface
       ref: fix/messaging
-  firebase_messaging_platform_interface: ^3.1.4
-  firebase_messaging_web: ^2.2.5
+  firebase_messaging_platform_interface:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_messaging/firebase_messaging_platform_interface
+      ref: fix/messaging
+  firebase_messaging_web:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_messaging/firebase_messaging_web
+      ref: fix/messaging
   flutter:
     sdk: flutter
   meta: 1.3.0-nullsafety.3
