--- a/packages/firebase_performance/firebase_performance_platform_interface/pubspec.yaml
+++ b/packages/firebase_performance/firebase_performance_platform_interface/pubspec.yaml
@@ -1,19 +1,27 @@
 name: firebase_performance_platform_interface
-description:  A common platform interface for the firebase_performance plugin.
+description: A common platform interface for the firebase_performance plugin.
 version: 0.1.0+3
 homepage: https://firebase.flutter.dev/docs/performance/overview
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: '>=2.7.0 <3.0.0'
+  flutter: '>=1.17.0'
 
 dependencies:
-  firebase_core: ^1.10.0
+  firebase_core:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_core/firebase_core
+      ref: fix/messaging
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.1
 
 dev_dependencies:
-  firebase_core_platform_interface: ^4.2.3
+  firebase_core_platform_interface:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_core/firebase_core_platform_interface
+      ref: fix/messaging
   flutter_test:
     sdk: flutter
