--- a/packages/firebase_performance/firebase_performance_web/pubspec.yaml
+++ b/packages/firebase_performance/firebase_performance_web/pubspec.yaml
@@ -9,13 +9,21 @@ environment:
 
 dependencies:
   firebase: ^9.0.1
-  firebase_core: ^1.10.0
+  firebase_core:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_core/firebase_core
+      ref: fix/messaging
   firebase_core_web:
     git:
       url: https://github.com/markokarapandzic/flutterfire.git
       path: packages/firebase_core/firebase_core_web
       ref: fix/messaging
-  firebase_performance_platform_interface: ^0.1.0+3
+  firebase_performance_platform_interface:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_performance/firebase_performance_platform_interface
+      ref: fix/messaging
   flutter:
     sdk: flutter
   flutter_web_plugins:
