--- a/packages/firebase_remote_config/firebase_remote_config/pubspec.yaml
+++ b/packages/firebase_remote_config/firebase_remote_config/pubspec.yaml
@@ -24,8 +24,16 @@ dependencies:
       url: https://github.com/markokarapandzic/flutterfire.git
       path: packages/firebase_core/firebase_core_platform_interface
       ref: fix/messaging
-  firebase_remote_config_platform_interface: ^1.0.3
-  firebase_remote_config_web: ^1.0.3
+  firebase_remote_config_platform_interface:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_remote_config/firebase_remote_config_platform_interface
+      ref: fix/messaging
+  firebase_remote_config_web:
+    git:
+      url: https://github.com/markokarapandzic/flutterfire.git
+      path: packages/firebase_remote_config/firebase_remote_config_web
+      ref: fix/messaging
   flutter:
     sdk: flutter
 
