--- a/packages/cloud_firestore/cloud_firestore_platform_interface/pubspec.yaml
+++ b/packages/cloud_firestore/cloud_firestore_platform_interface/pubspec.yaml
@@ -5,8 +5,8 @@ homepage: https://github.com/FirebaseExtended/flutterfire/tree/master/packages/c
 repository: https://github.com/FirebaseExtended/flutterfire/tree/master/packages/cloud_firestore/cloud_firestore_platform_interface
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.9.1+hotfix.5"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=1.9.1+hotfix.5'
 
 dependencies:
   collection: ^1.15.0
@@ -14,8 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   meta: ^1.3.0
-  plugin_platform_interface: ^2.0.0
-
+  plugin_platform_interface: 1.0.3
 
 dev_dependencies:
   firebase_core_platform_interface: ^4.2.3
