--- a/packages/cloud_functions/cloud_functions/pubspec.yaml
+++ b/packages/cloud_functions/cloud_functions/pubspec.yaml
@@ -8,8 +8,8 @@ false_secrets:
   - example/**
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.12.13+hotfix.5"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=1.12.13+hotfix.5'
 
 dependencies:
   cloud_functions_platform_interface: ^5.0.19
@@ -24,7 +24,7 @@ dev_dependencies:
     sdk: flutter
   flutter_test:
     sdk: flutter
-  plugin_platform_interface: ^2.0.0
+  plugin_platform_interface: 1.0.3
   test: any
 
 flutter:
