--- a/packages/firebase_app_check/firebase_app_check_platform_interface/pubspec.yaml
+++ b/packages/firebase_app_check/firebase_app_check_platform_interface/pubspec.yaml
@@ -4,15 +4,15 @@ homepage: https://github.com/FirebaseExtended/flutterfire/tree/master/packages/f
 version: 0.0.3+3
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=1.20.0'
 
 dependencies:
   firebase_core: ^1.10.0
   flutter:
     sdk: flutter
   meta: ^1.3.0
-  plugin_platform_interface: ^2.0.0
+  plugin_platform_interface: 1.0.3
 
 dev_dependencies:
   firebase_core_platform_interface: ^4.2.3
