--- a/packages/firebase_app_installations/firebase_app_installations/pubspec.yaml
+++ b/packages/firebase_app_installations/firebase_app_installations/pubspec.yaml
@@ -9,8 +9,8 @@ false_secrets:
   - example/**
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=1.20.0'
 
 dependencies:
   firebase_app_installations_platform_interface: ^0.1.0+4
@@ -26,7 +26,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.0.16
-  plugin_platform_interface: ^2.0.0
+  plugin_platform_interface: 1.0.3
   test: any
 
 flutter:
