--- a/packages/firebase_dynamic_links/firebase_dynamic_links_platform_interface/pubspec.yaml
+++ b/packages/firebase_dynamic_links/firebase_dynamic_links_platform_interface/pubspec.yaml
@@ -5,16 +5,15 @@ homepage: https://github.com/FirebaseExtended/flutterfire/tree/master/packages/f
 repository: https://github.com/FirebaseExtended/flutterfire/tree/master/packages/firebase_dynamic_links/firebase_dynamic_links_platform_interface
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.9.1+hotfix.5"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=1.9.1+hotfix.5'
 
 dependencies:
   firebase_core: ^1.10.3
   flutter:
     sdk: flutter
   meta: ^1.3.0
-  plugin_platform_interface: ^2.0.0
-
+  plugin_platform_interface: 1.0.3
 
 dev_dependencies:
   firebase_core_platform_interface: ^4.2.3
