--- a/packages/firebase_in_app_messaging/firebase_in_app_messaging_platform_interface/pubspec.yaml
+++ b/packages/firebase_in_app_messaging/firebase_in_app_messaging_platform_interface/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
   meta: 1.3.0-nullsafety.3
-  plugin_platform_interface: ^2.0.0
+  plugin_platform_interface: 1.0.3
 
 dev_dependencies:
   firebase_core_platform_interface:
