--- a/packages/firebase_messaging/firebase_messaging/pubspec.yaml
+++ b/packages/firebase_messaging/firebase_messaging/pubspec.yaml
@@ -42,7 +42,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.0.0
-  plugin_platform_interface: ^2.0.0
+  plugin_platform_interface: 1.0.3
   test: any
 
 flutter:
