--- a/packages/firebase_storage/firebase_storage_platform_interface/pubspec.yaml
+++ b/packages/firebase_storage/firebase_storage_platform_interface/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/FirebaseExtended/flutterfire/tree/master/packages/f
 repository: https://github.com/FirebaseExtended/flutterfire/tree/master/packages/firebase_storage/firebase_storage_platform_interface
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.9.1+hotfix.5"
+  flutter: '>=1.9.1+hotfix.5'
 
 dependencies:
   collection: ^1.15.0
@@ -13,7 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   meta: ^1.3.0
-  plugin_platform_interface: ^2.0.0
+  plugin_platform_interface: 1.0.3
 
 dev_dependencies:
   firebase_core_platform_interface: ^4.2.3
