--- a/packages/firebase_performance/firebase_performance_platform_interface/pubspec.yaml
+++ b/packages/firebase_performance/firebase_performance_platform_interface/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
       ref: fix/messaging
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.0.1
+  plugin_platform_interface: 1.0.3
 
 dev_dependencies:
   firebase_core_platform_interface:
