--- a/packages/firebase_dynamic_links/firebase_dynamic_links/pubspec.yaml
+++ b/packages/firebase_dynamic_links/firebase_dynamic_links/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   meta: ^1.3.0
-  plugin_platform_interface: ^2.0.2
+  plugin_platform_interface: 1.0.3
 
 dev_dependencies:
   flutter_test:
