--- a/packages/firebase_crashlytics/firebase_crashlytics_platform_interface/pubspec.yaml
+++ b/packages/firebase_crashlytics/firebase_crashlytics_platform_interface/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
   flutter: '>=1.12.13+hotfix.5'
 
 dependencies:
-  collection: ^1.15.0
+  collection: 1.15.0-nullsafety.3
   firebase_core:
     git:
       url: https://github.com/markokarapandzic/flutterfire.git
