--- a/packages/firebase_app_check/firebase_app_check_web/pubspec.yaml
+++ b/packages/firebase_app_check/firebase_app_check_web/pubspec.yaml
@@ -4,8 +4,8 @@ homepage: https://github.com/FirebaseExtended/flutterfire/tree/master/packages/f
 version: 0.0.5+3
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=1.20.0'
 
 dependencies:
   firebase_app_check_platform_interface: ^0.0.3+3
@@ -15,7 +15,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  js: ^0.6.3
+  js: 0.6.2
 
 dev_dependencies:
   firebase_app_check:
