--- a/packages/firebase_auth/firebase_auth_web/pubspec.yaml
+++ b/packages/firebase_auth/firebase_auth_web/pubspec.yaml
@@ -5,8 +5,8 @@ repository: https://github.com/FirebaseExtended/flutterfire/tree/master/packages
 version: 3.3.5
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.12.13+hotfix.4"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=1.12.13+hotfix.4'
 
 dependencies:
   firebase_auth_platform_interface: ^6.1.9
@@ -18,7 +18,7 @@ dependencies:
     sdk: flutter
   http_parser: ^4.0.0
   intl: ^0.17.0
-  js: ^0.6.3
+  js: 0.6.2
   meta: ^1.3.0
 
 dev_dependencies:
