--- a/packages/firebase_storage/firebase_storage_web/pubspec.yaml
+++ b/packages/firebase_storage/firebase_storage_web/pubspec.yaml
@@ -5,8 +5,8 @@ repository: https://github.com/FirebaseExtended/flutterfire/tree/master/packages
 version: 3.2.5
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=1.20.0'
 
 dependencies:
   async: ^2.5.0
@@ -18,7 +18,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   http: ^0.13.0
-  js: ^0.6.3
+  js: 0.6.2
   meta: ^1.3.0
 
 dev_dependencies:
