--- a/packages/firebase_performance/firebase_performance_web/pubspec.yaml
+++ b/packages/firebase_performance/firebase_performance_web/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
   flutter: '>=1.20.0'
 
 dependencies:
-  firebase: ^9.0.1
+  firebase: 8.0.0
   firebase_core:
     git:
       url: https://github.com/markokarapandzic/flutterfire.git
